--- a/phylogene_app/templates/credits.html
+++ b/phylogene_app/templates/credits.html
@@ -58,7 +58,7 @@
         <h1 >Credits</h1>
         <br/>
         <div id="info">
-                    <p><b>Supervisor &amp; Web Content Manager:</b> <a href="mailto:nrastogi@pasteur-guadeloupe.fr">Dr. David COUVIN</a></p>
+                    <p><b>Supervisor &amp; Web Content Manager:</b> <a href="mailto:dcouvin@pasteur-guadeloupe.fr">David COUVIN</a></p>
                     <p><b>Validation &amp; Development:</b> <a>Davy REGALADE</a>, <a href="mailto:dcazenave@pasteur-guadeloupe.fr">Damien CAZENAVE</a> &amp <a>Vincent MOCCO</a> </p>
         </div><br/>
     </div>
