--- a/phylogene_app/templates/intro.html
+++ b/phylogene_app/templates/intro.html
@@ -92,9 +92,63 @@
                         </table>
                     </div>
                 </div>
+                <footer style="height: 100%;">
+                    <table class="footer" width="100%" style="margin-top: 1em;">
+
+
+                    <tr>
+
+                      <td width="37%">
+                        <div id="info"><i>Copyright &copy; 2022, <a href="http://web.pasteur-guadeloupe.fr/"
+                              target="_blank">Institut Pasteur de la Guadeloupe</a>. All rights reserved. </i> </div>
+                      </td>
+                      <td height="21" colspan="2">
+                        <div id="info" >You can also follow us on <a
+                            href="https://www.facebook.com/Institut.Pasteur.Guadeloupe/" target="_blank">Facebook</a></div>
+                      </td>
+                    </tr>
+                    <!-- <tr>
+                              <td height="21" colspan="2">&nbsp;</td>
+                              <td width="37%"><div id="info" align="right"><a href="mailto:tburguiere@pasteur-guadeloupe.fr">Thomas Burguiere</a> &nbsp; <a href="mailto:dcouvin@pasteur-guadeloupe.fr">David Couvin</a> </div></td>
+                            </tr>-->
+
+                    <tr>
+                      <td height="21" colspan="3">
+                        <hr>
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td width="50%" height="46">Portions of this page are reproduced from work created and <a
+                          href="https://google-developers.appspot.com/site-policies" target="_blank">shared by Google</a> and used
+                        according to terms described in the <a href="http://creativecommons.org/licenses/by/3.0/"
+                          target="_blank">Creative Commons 3.0 Attribution License</a>.</td>
+                      <!--<a href="http://validator.w3.org/check?uri=referer" target="_blank">
+                        <img src="http://www.w3.org/Icons/valid-html401" alt="w3c" width="88" height="31" border="0" longdesc="http://validator.w3.org/check?uri=referer" >	</a></td>-->
+                      <td>
+                        <div>version &#946; 2.0 </div>
+                      </td>
+                      <td width="50%">
+                        <div><em>This site uses </em>&nbsp;
+                          <a href="https://www.djangoproject.com/" target="_blank">
+                            <img src="../static/img/djangologo.png" alt="django" width="68" height="35" border="0"> </a>&nbsp;
+                          <a href="https://getbootstrap.com/" target="_blank">
+                            <img src="../static/img/bootstraplogo.png" alt="bootstrap" width="68" height="35" border="0"> </a>&nbsp;
+                          <a href="https://www.python.org/" target="_blank">
+                            <img src="../static/img/pythonlogo.jpg" alt="bootstrap" width="68" height="35" border="0"> </a>&nbsp;
+                        </div>
+                      </td>
+                    </tr>
+
+                    </table>
+                </footer>
             </div>
 
+
         </div>
+
+
+
         <!--FIN PIED DE PAGE -->
 
           <!-- JS bootstrap-->
