--- a/phylogene_app/templates/links.html
+++ b/phylogene_app/templates/links.html
@@ -59,21 +59,21 @@
     <div class="col-lg-12" style="padding-top: 70px;">
         <p>
             <h1 >Links</h1>
-            - NGphylogeny : https://ngphylogeny.fr/
+        - NGphylogeny : <a href="https://ngphylogeny.fr/" target="_blank">https://ngphylogeny.fr/</a>
             <br>
-            - cripscasfinder : https://crisprcas.i2bc.paris-saclay.fr/
+        - cripscasfinder : <a href="https://crisprcas.i2bc.paris-saclay.fr/" target="_blank">https://crisprcas.i2bc.paris-saclay.fr/</a>
             <br>
-            - GrapeTree : https://github.com/achtman-lab/GrapeTree
+        - GrapeTree : <a href="https://github.com/achtman-lab/GrapeTree" target="_blank">https://github.com/achtman-lab/GrapeTree</a>
             <br>
-            - vis.js : https://visjs.org/
+        - vis.js : <a href="https://visjs.org/" target="_blank">https://visjs.org/</a>
             <br>
-            - Graphviz : https://graphviz.org/
+        - Graphviz : <a href="https://graphviz.org/" target="_blank">https://graphviz.org/</a>
             <br>
-            - NGPhylogeny.fr : https://ngphylogeny.fr/
+        - NGPhylogeny.fr : <a href="https://ngphylogeny.fr/" target="_blank">https://ngphylogeny.fr/</a>
             <br>
-            - iTOL : https://itol.embl.de
+        - iTOL : <a href="https://itol.embl.de" target="_blank">https://itol.embl.de</a>
             <br>
-            - Scikit-learn : https://scikit-learn.org/stable/
+        - Scikit-learn : <a href="https://scikit-learn.org/stable/" target="_blank">https://scikit-learn.org/stable/</a>
         </p>
     </div>
 </div>
