modif background color en blanc

--- a/phylogene_app/templates/base.html
+++ b/phylogene_app/templates/base.html
@@ -62,7 +62,7 @@
             </div>
         </nav>
 
-  <div class="container-fluid" style="background-color: #a6aaa9;">
+  <div class="container-fluid" style="background-color: #ffffff;">
 
     <!--BANDEAU -->
     <div class="container" style="background-color: #ffffff;">
