Traduction en anglais + ajout footer

--- a/phylogene_app/templates/about.html
+++ b/phylogene_app/templates/about.html
@@ -70,29 +70,73 @@
             Pour plus d'informations sur la façon d'utiliser cette application Web, prière de lire le <a href="../static/files/manuel.pdf" target="_blank">Manuel de l'Utilisateur</a>
         </p> -->
         <p>
-        <p><span
-                style="text-decoration: underline;">Le « Pourquoi » de l’application <b>phylEntropy</b></span><br></p>
-                L’application phylEntropy permet de réaliser de l’analyse et de la visualisation de données. Bien qu’il existe déjà de nombreux outils permettant l’analyse et de la visualisation de données, notre approche se différencie d’autres applications en permettant aux utilisateurs d’effectuer aussi bien des analyses bio-statistiques classiques que des analyses plus spécifiques qui nécessitent habituellement l’utilisation de logiciels payants ou une expérience particulière. Lorsque nous prenons l’exemple de la représentation d’un arbre de recouvrement minimal contenant des annotations en fonction des données ou caractères étudiés, nous devons souvent utiliser des logiciels payants comme BioNumerics (<a href="http://www.applied-maths.com/bionumerics" target="_blank">http://www.applied-maths.com/bionumerics</a>) pour représenter clairement les données en fonction de divers paramètres (ou variables). L’utilisation d’algorithmes et de librairies JavaScript existants permet de proposer à l’utilisateur non-expert une solution rapide d’analyse pour ses données. De plus, avec le développement de l’application phylEntropy, nous essayons de mettre en place de nouvelles stratégies d’analyse en suivant un paradigme qui diffère des outils existants. Par exemple, dans cette application, nous considérons des objets de type « séquence biologique » qui diffèrent des séquences d’ADN ou de protéines classiques. Cette séquence biologique est représentée sous une forme de chaine de caractères pouvant contenir des chiffres, des lettres, mais aussi des caractères spéciaux (s’il s’agit d’une analyse assez complexe ou spécifique).
-                <br><br>
-        <p><span style="text-decoration: underline;">Qu'est-ce que l’application <b>phylEntropy</b></span><br></p>
-                phylEntropy est une application Web d’analyse et de visualisation de données. L’outil regroupe plusieurs modules d’analyse représentant différentes thématiques de recherche : phylogénie/clustering, bio-statistique, mesures de diversité biologique, analyses multivariées, apprentissage automatique.
-                L’utilisateur peut importer ses données sous forme de fichier CSV avant de choisir un type d’analyse à effectuer. La première colonne de notre fichier contient l’identifiant de chaque « objet ». Les colonnes suivantes contiennent la séquence biologique (un caractère par colonne). Les dernières colonnes (représentant des variables de description) contiennent généralement des chaines de caractères (texte).
-                </p>
+            <p>
+                <span style="text-decoration: underline;">What is <b>phylEntropy</b></span><br>
             </p>
+                    phylEntropy is a web-based data analysis and visualization application. The tool brings together several analysis modules representing different research themes: phylogeny/clustering, bio-statistics, measures of biological diversity, multivariate analyses, machine learning.
+                     The user can import his data as a CSV file before choosing a type of analysis to perform. The first column of our file contains the identifier of each “object”. The following columns contain the biological sequence (one character per column). The last columns (representing description variables) generally contain character strings (text).
+            </p>
+
+        <p>
+                <span style="text-decoration: underline;">Why <b>phylEntropy</b></span><br>
+        </p>
+                    The phylEntropy application allows you to perform data analysis and visualization. Although there are already many tools for analyzing and visualizing data, our approach differs from other applications by allowing users to perform both classic bio-statistical analyzes and more specific analyzes that require usually the use of paid software or special experience. When we take the example of the representation of a minimum spanning tree containing annotations according to the data or characters studied, we often have to use paid software such as BioNumerics (<a href="http://www.applied-maths.com/bionumerics" target="_blank">http://www.applied-maths.com/bionumerics</a>) to clearly represent data in terms of various parameters (or variables). The use of existing algorithms and JavaScript libraries makes it possible to offer the non-expert user a rapid analysis solution for their data. In addition, with the development of the phylEntropy application, we are trying to implement new analysis strategies by following a paradigm that differs from existing tools. For example, in this application, we consider “biological sequence” type objects that differ from classical DNA or protein sequences. This biological sequence is represented in the form of a string of characters that can contain numbers, letters, but also special characters (if it is a fairly complex or specific analysis).
+        <br><br>
+                </br>
             </br>
         </br>
-    </br>
 
-        <div id="info">
-            <p><b>Supervisor &amp; Web Content Manager:</b> <a href="mailto:nrastogi@pasteur-guadeloupe.fr">Dr. David COUVIN</a></p>
-            <p><b>Validation &amp; Development:</b> <a>Davy REGALADE</a>, <a href="mailto:dcazenave@pasteur-guadeloupe.fr">Damien CAZENAVE</a> &amp <a>Vincent MOCCO</a> </p>
-        </div><br/>
+    </div>
+    <footer>
+        <table class="footer" width="100%" style="margin-top: 1em;">
 
-        <div style="text-align: center;">
-                <table class="footer" width="100%" border="0">
 
-                </table>
-        </div>
+        <tr>
+
+          <td width="37%">
+            <div id="info"><i>Copyright &copy; 2022, <a href="http://web.pasteur-guadeloupe.fr/"
+                  target="_blank">Institut Pasteur de la Guadeloupe</a>. All rights reserved. </i> </div>
+          </td>
+          <td height="21" colspan="2">
+            <div id="info" >You can also follow us on <a
+                href="https://www.facebook.com/Institut.Pasteur.Guadeloupe/" target="_blank">Facebook</a></div>
+          </td>
+        </tr>
+        <!-- <tr>
+                  <td height="21" colspan="2">&nbsp;</td>
+                  <td width="37%"><div id="info" align="right"><a href="mailto:tburguiere@pasteur-guadeloupe.fr">Thomas Burguiere</a> &nbsp; <a href="mailto:dcouvin@pasteur-guadeloupe.fr">David Couvin</a> </div></td>
+                </tr>-->
+
+        <tr>
+          <td height="21" colspan="3">
+            <hr>
+          </td>
+        </tr>
+
+        <tr>
+          <td width="50%" height="46">Portions of this page are reproduced from work created and <a
+              href="https://google-developers.appspot.com/site-policies" target="_blank">shared by Google</a> and used
+            according to terms described in the <a href="http://creativecommons.org/licenses/by/3.0/"
+              target="_blank">Creative Commons 3.0 Attribution License</a>.</td>
+          <!--<a href="http://validator.w3.org/check?uri=referer" target="_blank">
+            <img src="http://www.w3.org/Icons/valid-html401" alt="w3c" width="88" height="31" border="0" longdesc="http://validator.w3.org/check?uri=referer" >	</a></td>-->
+          <td>
+            <div>version &#946; 2.0 </div>
+          </td>
+          <td width="50%">
+            <div><em>This site uses </em>&nbsp;
+              <a href="https://www.djangoproject.com/" target="_blank">
+                <img src="../static/img/djangologo.png" alt="django" width="68" height="35" border="0"> </a>&nbsp;
+              <a href="https://getbootstrap.com/" target="_blank">
+                <img src="../static/img/bootstraplogo.png" alt="bootstrap" width="68" height="35" border="0"> </a>&nbsp;
+              <a href="https://www.python.org/" target="_blank">
+                <img src="../static/img/pythonlogo.jpg" alt="bootstrap" width="68" height="35" border="0"> </a>&nbsp;
+            </div>
+          </td>
+        </tr>
+
+      </table>
+    </footer>
 
     </div>
 </div>
