Ajout option multi pie chart

--- a/phylogene_app/templates/import_data.html
+++ b/phylogene_app/templates/import_data.html
@@ -163,11 +163,13 @@
                     <div class="tab-content">
                         <div class="tab-pane fade show active" id="graph">
                             <h5 class="card-title">Instructions about how to launch</h5>
-                            <p class="card-text">Allow you to visualize your data.</p>
+                            <p class="card-text">Use "exemple2.csv" then click on Select All > Store Value > the option you want to use.</p>
                             <input id="submit1" name="kruskal" class="btn btn-primary" type="submit" value="Minimun Spanning Tree" onclick="this.form.submited=this.value;" >
                             <input id="submit2" name="upgma"   class="btn btn-primary" type="submit" value="UPGMA" onclick="this.form.submited=this.value;" >
                             <input id="submit3" name="neighbor-joining"   class="btn btn-primary" type="submit" value="Neighbor-Joining" onclick="this.form.submited=this.value;" >
                             <input id="submit12" name="Wordcloud"   class="btn btn-primary" type="submit" value="Wordcloud" onclick="this.form.submited=this.value;" >
+                            <input id="submit22" name="Pie Chart"   class="btn btn-primary" type="submit" value="Pie Chart" onclick="this.form.submited=this.value;" >
+
                         </div>
                         <div class="tab-pane fade" id="statistics">
                             <h5 class="card-title">Instructions about how to launch</h5>
@@ -177,13 +179,13 @@
                         </div>
                         <div class="tab-pane fade" id="maps">
                             <h5 class="card-title">Instructions about how to launch</h5>
-                            <p class="card-text">Here is some example text to make up the tab's content. Replace it with your own text anytime.</p>
+                            <p class="card-text">Use "exemple2.csv" then click on Select All > Store Value > the option you want to use.</p>
                             <input id="submit8" name="Global Map"   class="btn btn-primary" type="submit" value="Global Map" onclick="this.form.submited=this.value;" >
                             <input id="submit11" name="Global City Map"   class="btn btn-primary" type="submit" value="Global City Map" onclick="this.form.submited=this.value;" >
                         </div>
                         <div class="tab-pane fade" id="metrics">
                             <h5 class="card-title">Instructions about how to launch</h5>
-                            <p class="card-text">Here is some example text to make up the tab's content. Replace it with your own text anytime.</p>
+                            <p class="card-text">Use "exemple2.csv" or "Spoligo_list"  then click on Select All > Store Value > the option you want to use.</p>
                             <input id="submit6" name="pca"   class="btn btn-primary" type="submit" value="PCA" onclick="this.form.submited=this.value;" >
                             <input id="submit7" name="Entropy"   class="btn btn-primary" type="submit" value="Entropy" onclick="this.form.submited=this.value;" >
                             <input id="submit9" name="Hunter-Gaston"   class="btn btn-primary" type="submit" value="Hunter-Gaston" onclick="this.form.submited=this.value;" >
@@ -191,7 +193,7 @@
                        </div>
                         <div class="tab-pane fade" id="machinelearning">
                             <h5 class="card-title">Instructions about how to launch</h5>
-                            <p class="card-text">Here is some example text to make up the tab's content. Replace it with your own text anytime.</p>
+                            <p class="card-text">Use "Spoligo_list" then click on Select All > Store Value > the option you want to use.</p>
                             <div class="dropdown text-center">
                                 <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
                                 Supervized Learning
